# rangeOS

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buff.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  long_mode_init.asm
src/interrupts/: mod.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
