[package]
name = "range_os"
version = "0.1.0"
edition = "2021"
authors = ["MCornage <mcorangecodes@gmail.com>"]

[lib]
crate-type = ["staticlib"]
test = false

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.9.8"
multiboot2 = "0.1.0"
bitflags = "0.9.1"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# uart_16550 = "0.2.0" # serial out

# [dependencies.lazy_static]
# version = "1.0"
# features = ["spin_no_std"]
